OCaml/mini-c/tests/typing/bad/testfile-undef_field-1.c
struct S {
  int a;
};

int main() {
  struct S* p;
  p->b = 1;
}

